--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=1.0.0
 author=hwwong
 maintainer=hwwong
 sentence=ESP32 / ESP8266 influxdb client.
-paragraph=ESP32 / ESP8266 influxdb client, posts and queries data
+paragraph=Posts and queries data via http
 category=Data Storage
 url=https://github.com/hwwong/ESP_influxdb
-architectures=ESP8266,ESP32
+architectures=esp8266,esp32
 
